--- a/gradle.properties
+++ b/gradle.properties
@@ -6,15 +6,15 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version = 1.20.1
-loader_version = 0.14.21
-fabric_version = 0.86.0+1.20.1
+loader_version = 0.16.9
+fabric_version = 0.92.2+1.20.1
 
 # Mod Properties
 mod_version=1.20.1-0.5
 maven_group=com.ferriarnus
 archives_base_name=liquidburner
 
-parchment_version = 2023.07.09
+parchment_version = 2023.09.03
 
 # Dependencies
 # https://www.curseforge.com/minecraft/mc-mods/forge-config-api-port-fabric/files
@@ -28,8 +28,8 @@ reach_entity_attributes_version = 2.4.0
 registrate_version = 1.3.62-MC1.20.1
 milk_lib_version = 1.2.60
 
-port_lib_version = 2.3.0+1.20.1
+port_lib_version = 2.3.8+1.20.1
 # adding a module also requires adding a dependency to the FMJ
-port_lib_modules = accessors,base,entity,extensions,networking,obj_loader,tags,transfer,models,tool_actions,client_events,brewing
+port_lib_modules = accessors,base,entity,extensions,networking,obj_loader,tags,transfer,models,tool_actions,client_events,brewing,fluids
 
 night_config_version = 3.6.3
